tests/test_assets/semantic/invalid/pointers/nested_mutable_to_readonly_pointer.cog
nested_pointer_conversion_is_invalid::(
    source: i32**
) -> void {
    destination: readonly i32** = source;
}
