tests/test_assets/semantic/invalid/pointers/nested_mutable_to_readonly_pointer.expected
semantic error at line 4: initializer type does not match declared type
1 semantic error generated.
